qcacld-3.0: Move 11d offload to separate file
Currently 11d offload functionality is in reg_host_11d.c and
reg_host_11d.h files and are getting controlled with a
feature flag HOST_11D_SCAN.
HOST_11D_SCAN flag is to enable host 11d scan and 11d offload
feature should not be controlled with this flag.

Move 11d offload functionality to separate files
reg_offload_11d_scan.c and reg_offload_11d_scan.h and
compilation rule for these files.

Change-Id: I9bb73a5d995083cb746b76901a2db0d37a9b9827
CRs-Fixed: 2382525

--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -575,10 +575,10 @@ CONFIG_WLAN_WBUFF := y
 CONFIG_DISABLE_CHANNEL_LIST :=y
 
 #Flag to enable LTE COEX feature
-CONFIG_CONFIG_LTE_COEX := y
+CONFIG_LTE_COEX := y
 
-#Flag to enable/disable HOST 11d scan
-CONFIG_HOST_11D_SCAN :=y
+#Flag to enable/disable TARGET 11d scan
+CONFIG_TARGET_11D_SCAN := y
 
 #Flag to enable HOST OPCLASS feature
 CONFIG_HOST_OPCLASS := y
