--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Unnamed"
+CONFIG_LOCALVERSION="-Paradox"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
