--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -278,6 +278,7 @@ ifeq ($(CONFIG_ARCH_QCS40X), y)
 	CONFIG_DFS_OVERRIDE_RF_THRESHOLD := y
 	CONFIG_WLAN_FEATURE_LL_MODE := y
 	CONFIG_WLAN_CLD_PM_QOS := y
+	CONFIG_WLAN_CLD_DEV_PM_QOS := y
 endif
 CONFIG_WLAN_FEATURE_MBSSID := y
 CONFIG_WLAN_FEATURE_P2P_P2P_STA := y
