marble defconfig: Select CONFIG_MACH_XIAOMI_MARBLE

--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -1105,3 +1105,6 @@ CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 CONFIG_QCA_CLD_WLAN=m
 CONFIG_QCA_CLD_WLAN_PROFILE="qca6490"
 CONFIG_MI_CNSS_STATISTIC=m
+
+CONFIG_MACH_XIAOMI=y
+CONFIG_MACH_XIAOMI_MARBLE=y
