--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -1072,6 +1072,8 @@ CONFIG_TOUCHSCREEN_GOODIX_BRL=m
 CONFIG_TOUCHSCREEN_NT36XXX_I2C=m
 CONFIG_TOUCHSCREEN_NT36XXX_SPI=m
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX=m
+CONFIG_TOUCHSCREEN_GOODIX_BRL_9916=m
+CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=m
 CONFIG_UCSI_QTI_GLINK=m
 CONFIG_UIO_MSM_SHAREDMEM=m
 CONFIG_USB_BAM=m
