marble defconfig: Build goodix_9916r driver as module

--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -1041,6 +1041,8 @@ CONFIG_STM_PROTO_OST=m
 CONFIG_STM_SOURCE_CONSOLE=m
 CONFIG_STM_SOURCE_FTRACE=m
 # CONFIG_SWIOTLB_NONLINEAR is not set
+CONFIG_TOUCHSCREEN_GOODIX_BRL_9916=m
+CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=m
 CONFIG_UCSI_QTI_GLINK=m
 CONFIG_UIO_MSM_SHAREDMEM=m
 CONFIG_USB_BAM=m
