marble defconfig: Melt

--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Unnamed"
+CONFIG_LOCALVERSION="-Melt"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_IRQ_SBALANCE=y
 CONFIG_SBALANCE_EXCLUDE_CPUS="3,6,7"
