--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -1081,6 +1081,7 @@ CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 CONFIG_QCA_CLD_WLAN=m
 CONFIG_QCA_CLD_WLAN_PROFILE="qca6490"
 CONFIG_MI_CNSS_STATISTIC=m
+CONFIG_MI_HARDWARE_ID=m
 
 CONFIG_MACH_XIAOMI=y
 CONFIG_MACH_XIAOMI_MARBLE=y
