--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -339,8 +339,8 @@ CONFIG_PPPOL2TP=y
 CONFIG_USB_RTL8150=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_USBNET=y
-# CONFIG_USB_NET_AX8817X is not set
-# CONFIG_USB_NET_AX88179_178A is not set
+CONFIG_USB_NET_AX8817X=m
+CONFIG_USB_NET_AX88179_178A=m
 CONFIG_USB_NET_CDC_EEM=y
 # CONFIG_USB_NET_NET1080 is not set
 # CONFIG_USB_NET_CDC_SUBSET is not set
@@ -1081,6 +1081,17 @@ CONFIG_MI_HARDWARE_ID=m
 # CONFIG_MI_WIRELESS is not set
 CONFIG_BQ_FUEL_GAUGE=y
 CONFIG_BQ_FG_UPDATE=y
+CONFIG_XLOGCHAR=m
+CONFIG_HEALTH_GOODIX=m
+CONFIG_INPUT_FINGERPRINT=y
+CONFIG_FINGERPRINT_FPC_1540=m
+CONFIG_FINGERPRINT_GOODIX_3626=m
+CONFIG_FINGERPRINT_XIAOMI_FP=m
+CONFIG_EXTEND_RECLAIM=m
+CONFIG_MTD=m
+CONFIG_MTD_BLOCK=m
+CONFIG_MTD_BLOCK2MTD=m
+CONFIG_MTD_OOPS=m
 
 CONFIG_MACH_XIAOMI=y
 CONFIG_MACH_XIAOMI_MARBLE=y
