--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -341,8 +341,8 @@ CONFIG_PPPOL2TP=y
 CONFIG_USB_RTL8150=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_USBNET=y
-# CONFIG_USB_NET_AX8817X is not set
-# CONFIG_USB_NET_AX88179_178A is not set
+CONFIG_USB_NET_AX8817X=m
+CONFIG_USB_NET_AX88179_178A=m
 CONFIG_USB_NET_CDC_EEM=y
 # CONFIG_USB_NET_NET1080 is not set
 # CONFIG_USB_NET_CDC_SUBSET is not set
@@ -1105,3 +1105,15 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=m
 CONFIG_ZRAM=m
 CONFIG_ZSMALLOC=m
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
+
+CONFIG_XLOGCHAR=m
+CONFIG_HEALTH_GOODIX=m
+CONFIG_INPUT_FINGERPRINT=y
+CONFIG_FINGERPRINT_FPC_1540=m
+CONFIG_FINGERPRINT_GOODIX_3626=m
+CONFIG_FINGERPRINT_XIAOMI_FP=m
+CONFIG_EXTEND_RECLAIM=m
+CONFIG_MTD=m
+CONFIG_MTD_BLOCK=m
+CONFIG_MTD_BLOCK2MTD=m
+CONFIG_MTD_OOPS=m
