qcacld-3.0: Kbuild changes for FEATURE_ENABLE_CE_DP_IRQ_AFFINE
Kbuild changes FEATURE_ENABLE_CE_DP_IRQ_AFFINE.

Change-Id: Ifbcc443416219f0708b7767b1e4e58cf2e807810
CRs-Fixed: 3590605

--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -602,6 +602,7 @@ CONFIG_TSOSEG_DEBUG := y
 CONFIG_HIF_LARGE_CE_RING_HISTORY := 8192
 endif
 
+CONFIG_FEATURE_ENABLE_CE_DP_IRQ_AFFINE := y
 endif #CONFIG_HELIUMPLUS
 
 ifeq (y,$(filter y,$(CONFIG_LITHIUM) $(CONFIG_BERYLLIUM)))
