--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -1084,7 +1084,11 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=m
 # CONFIG_WILC1000_SDIO is not set
 # CONFIG_WILC1000_SPI is not set
 CONFIG_ZRAM=y
+CONFIG_ZRAM_DEF_COMP_LZ4=y
+CONFIG_ZRAM_DEF_COMP="lz4"
+# CONFIG_ZRAM_MULTI_COMP is not set
 CONFIG_ZSMALLOC=y
+CONFIG_ZSMALLOC_CHAIN_SIZE=8
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 
 CONFIG_QCA_CLD_WLAN=m
