treewide: Include KernelSU
- Branch: main
- Tag: `v0.6.8`
- HEAD: `1f42bbac5ef3fbaf2a5497f631c5b2a57421db6d`
- But the `./KernelSU` directory is not kept
- Move from `drivers/kernelsu` to `drivers/staging/kernelsu`

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -122,4 +122,6 @@ source "drivers/staging/extend_reclaim/Kconfig"
 
 source "drivers/staging/qcacld-3.0/Kconfig"
 
+source "drivers/staging/kernelsu/Kconfig"
+
 endif # STAGING
