marble defconfig: Configure big, LITTLE, and prime CPU masks
- We have 4x A510 cores, 3x A710 cores, and 1x X2 core.
- The value is calculated by [CPU Affinity Calculator](https://github.com/jeremycollake/affinity-calc)

--- a/arch/arm64/configs/marble_defconfig
+++ b/arch/arm64/configs/marble_defconfig
@@ -58,6 +58,9 @@ CONFIG_ARCH_QCOM=y
 CONFIG_ARM64_ERRATUM_2454944=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=32
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=112
+CONFIG_PRIME_CPU_MASK=128
 CONFIG_HZ_300=y
 CONFIG_PARAVIRT=y
 CONFIG_ARM64_SW_TTBR0_PAN=y
